--- a/07_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -68,183 +68,152 @@
 
             </section>
         </div>
-        <div class="tct2">
-            <ul class="tabs-list">
-                <li class="tab vc_active"><a href="#"><i class="fa fa-shopping-cart"></i><span class="title-text">Bảng giá</span></a></li>
-                <li class="tta-tab"><a href="#"><i class="tta-icon fa fa-shopping-cart"></i><span class="title-text">Shop</span></a></li>
-                <li class="tta-tab"><a href="#"><i class="tta-icon fa fa-newspaper-o"></i><span class="title-text">Blog</span></a></li>
-            </ul>
-
-        </div>
-        <div class="top-cate">
-            <div class="featured-pro container">
-                <div class="row">
-                    <div class="slider-items-products">
-                        <div class="new_title">
-                            <h2>Loại Sản phẩm</h2>
-                        </div>
-                        <div id="top-categories" class="product-flexslider hidden-buttons">
-                            <div class="slider-items slider-width-col4 products-grid">
-                                @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                                {
-                                    foreach (var item in commonInfo.ProductCategoryList)
-                                    {
-                                        if (item.ChildCategory != null && item.ChildCategory.Length > 0)
-                                        {
-                                            foreach (var childItem in item.ChildCategory)
-                                            {
-                                                <div class="item">
-                                                    <div class="pro-img">
-                                                        <a href="@Anpero.StringHelpper.GetCategoryLink(childItem.Name, childItem.Id)">
-                                                            <img src="@childItem.Images" alt="@childItem.Name">
-                                                            <div class="pro-info">@childItem.Name</div>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            }
-                                        }
-                                    }
-                                }
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="top">
         <div class="container">
             <div class="row">
-                <ul>
-                    @if (ViewData["AdsSlide"] != null)
-                    {
-                        Ads[] slide = (Ads[])ViewData["AdsSlide"];
-                        if (slide.Length > 0)
-                        {
-                            for (int i = 0; i < slide.Length; i++)
-                            {
-                                <li>
-                                    <div>
-                                        <a href="@slide[i].ClickUrl" data-scroll-goto="@(i+1)">
-                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
-                                        </a>
-                                    </div>
-                                </li>
-                            }
-                        }
-                    }
-                </ul>
-            </div>
-        </div>
-    </div>
+                <div class="tct2">
+                    <ul class="tabs-list">
+                        <li class="tab vc_active"><a href="#"><i class="fa fa-shopping-cart"></i><span class="title-text">Bảng giá</span></a></li>
+                        <li class="tta-tab"><a href="#"><i class="tta-icon fa fa-shopping-cart"></i><span class="title-text">Shop</span></a></li>
+                        <li class="tta-tab"><a href="#"><i class="tta-icon fa fa-newspaper-o"></i><span class="title-text">Blog</span></a></li>
+                    </ul>
 
-
-
-    <section class="wow bounceInUp animated">
-        <div class="best-pro slider-items-products container">
-            <div class="new_title">
-                <h2>Sản phẩm bán chạy</h2>
-            </div>
-            <div class="cate-banner-img">
-                @if (ViewData["AdsSlide2"] != null)
-                {
-                    Ads[] slide = (Ads[])ViewData["AdsSlide2"];
-                    if (slide.Length > 0)
-                    {
-                        <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
-                    }
-                }
-            </div>
-            <div id="best-seller" class="product-flexslider hidden-buttons">
-                <div class="slider-items slider-width-col4 products-grid">
-                    @if (ViewData["BestsaleProduct"] != null)
-                    {
-                        AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
-                        if (bestSaleList != null && bestSaleList.Item.Length > 0)
-                        {
-                            foreach (ProductItem item in bestSaleList.Item)
-                            {
-                                <div class="item">
-                                    <div class="item-inner">
-                                        <div class="item-img">
-                                            <div class="item-img-info">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
-                                                    <img src="@item.Images" alt="@item.PrName">
-                                                </a>
-                                                <div class="new-label new-top-left">New</div>
-                                                <div class="item-box-hover">
-                                                    <div class="box-inner">
-                                                        <div class="product-detail-bnt">
-                                                            <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                                                <span>Chi tiết</span>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="item-info">
-                                            <div class="info-inner">
-                                                <div class="item-title">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                                        @item.PrName
-                                                    </a>
-                                                </div>
-                                                <div class="item-content">
-                                                    <div class="rating">
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div class="rating" style="width:80%"></div>
-                                                            </div>
-                                                            <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="item-price">
-                                                        <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
-                                                    </div>
-                                                    <div class="add_cart">
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
-                        }
-                    }
                 </div>
             </div>
         </div>
-    </section>
-
-    @if (ViewData["FeatureArticle"] != null)
-    {
-        SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
-        <div class="latest-blog wow bounceInUp animated animated container">
-            <div class="new_title">
-                <h2>Bài viết mới nhất</h2>
             </div>
-            @foreach (BlogItem item in FeatureArticle.ItemList)
-            {
-                <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 blog-post">
-                    <div class="blog_inner">
-                        <div class="blog-img">
-                            <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)"> <img src="@item.Thumb" alt="@item.ShotDesc"> </a>
-                            <div class="mask"> <a class="info" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a> </div>
-                        </div>
-                        <div class="blog-info">
-                            <div class="post-date">
-                                <time class="entry-date" datetime="@item.CreateDate">mới đăng</time>
-                            </div>
-                            <h3><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@item.Title</a></h3>
-                            <p>@Anpero.StringHelpper.SubString(150, item.ShotDesc)</p>
-                            <a class="readmore" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Xem thêm</a>
+          
+                <div class="container">
+                    <div class="row">
+                        <ul>
+                            @if (ViewData["AdsSlide"] != null)
+                            {
+                                Ads[] slide = (Ads[])ViewData["AdsSlide"];
+                                if (slide.Length > 0)
+                                {
+                                    for (int i = 0; i < slide.Length; i++)
+                                    {
+                                        <li>
+                                            <div>
+                                                <a href="@slide[i].ClickUrl" data-scroll-goto="@(i+1)">
+                                                    <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
+                                                </a>
+                                            </div>
+                                        </li>
+                                    }
+                                }
+                            }
+                        </ul>
+                    </div>
+                </div>
+           
+
+
+
+            <section class="wow bounceInUp animated">
+                <div class="best-pro slider-items-products container">
+                    <div class="new_title">
+                        <h2>Sản phẩm bán chạy</h2>
+                    </div>
+                    <div class="cate-banner-img">
+                        @if (ViewData["AdsSlide2"] != null)
+                        {
+                            Ads[] slide = (Ads[])ViewData["AdsSlide2"];
+                            if (slide.Length > 0)
+                            {
+                                <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
+                            }
+                        }
+                    </div>
+                    <div id="best-seller" class="product-flexslider hidden-buttons">
+                        <div class="slider-items slider-width-col4 products-grid">
+                            @if (ViewData["BestsaleProduct"] != null)
+                            {
+                                AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
+                                if (bestSaleList != null && bestSaleList.Item.Length > 0)
+                                {
+                                    foreach (ProductItem item in bestSaleList.Item)
+                                    {
+                                        <div class="item">
+                                            <div class="item-inner">
+                                                <div class="item-img">
+                                                    <div class="item-img-info">
+                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
+                                                            <img src="@item.Images" alt="@item.PrName">
+                                                        </a>
+                                                        <div class="new-label new-top-left">New</div>
+                                                        <div class="item-box-hover">
+                                                            <div class="box-inner">
+                                                                <div class="product-detail-bnt">
+                                                                    <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                                        <span>Chi tiết</span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="item-info">
+                                                    <div class="info-inner">
+                                                        <div class="item-title">
+                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                                @item.PrName
+                                                            </a>
+                                                        </div>
+                                                        <div class="item-content">
+                                                            <div class="rating">
+                                                                <div class="ratings">
+                                                                    <div class="rating-box">
+                                                                        <div class="rating" style="width:80%"></div>
+                                                                    </div>
+                                                                    <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="item-price">
+                                                                <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
+                                                            </div>
+                                                            <div class="add_cart">
+                                                                <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                }
+                            }
                         </div>
                     </div>
                 </div>
-            }
-        </div>
-    }
+            </section>
 
-</div>
+            @if (ViewData["FeatureArticle"] != null)
+            {
+                SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
+                <div class="latest-blog wow bounceInUp animated animated container">
+                    <div class="new_title">
+                        <h2>Bài viết mới nhất</h2>
+                    </div>
+                    @foreach (BlogItem item in FeatureArticle.ItemList)
+                    {
+                        <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 blog-post">
+                            <div class="blog_inner">
+                                <div class="blog-img">
+                                    <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)"> <img src="@item.Thumb" alt="@item.ShotDesc"> </a>
+                                    <div class="mask"> <a class="info" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a> </div>
+                                </div>
+                                <div class="blog-info">
+                                    <div class="post-date">
+                                        <time class="entry-date" datetime="@item.CreateDate">mới đăng</time>
+                                    </div>
+                                    <h3><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@item.Title</a></h3>
+                                    <p>@Anpero.StringHelpper.SubString(150, item.ShotDesc)</p>
+                                    <a class="readmore" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Xem thêm</a>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+            }
+
+        </div>
