--- a/07_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-    font-family:  Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     line-height: 1.6em;
 }
@@ -8508,8 +8508,7 @@ ol#compare-items li {
     margin-bottom: 30px;
     display: block;
     padding-bottom: 25px;
-    padding-top:15px;
-
+    padding-top: 15px;
 }
 
 .products-list .ratings {
@@ -13788,7 +13787,7 @@ select#shipping-address-select {
 
 .fl-links {
     float: right;
- background: rgba(136, 190, 76, 0.58);
+    background: rgba(136, 190, 76, 0.58);
 }
 
     .fl-links .clicker {
@@ -14198,13 +14197,15 @@ select#shipping-address-select {
 #prCatCtTable img {
     width: 100px;
 }
+
 .ctContent {
     margin-bottom: 10px;
     padding-top: 10px;
     border-top: 1px solid whitesmoke;
 }
-.price-percent-reduction2{
-        position: absolute;
+
+.price-percent-reduction2 {
+    position: absolute;
     top: 10px;
     left: 10px;
     background-color: red;
@@ -14212,41 +14213,50 @@ select#shipping-address-select {
     margin: 5px;
     color: white;
 }
-.show-count-down{
-  text-align: center;
-  margin-bottom:5px;
+
+.show-count-down {
+    text-align: center;
+    margin-bottom: 5px;
 }
-.show-count-down .box-count{
-  display: inline-block;
-  margin-right: 2px;
-  color: #ff3366;
-}
-.show-count-down .dot{
-  display: none;
-}
-.show-count-down .box-count .number{
-  
-  width: 100%;
-  float: left;
-  background: #eaeaea;
-  padding: 5px 0;
-  font-size: 16px;
-}
-.show-count-down .box-count .text{
-  background: #eaeaea;
-  font-size: 12px;
-  margin-top: 1px;
-  width: 100%;
-  float: left;
-  padding: 5px 0; 
-  color: #666;
-}
+
+    .show-count-down .box-count {
+        display: inline-block;
+        margin-right: 2px;
+        color: #ff3366;
+    }
+
+    .show-count-down .dot {
+        display: none;
+    }
+
+    .show-count-down .box-count .number {
+        width: 100%;
+        float: left;
+        background: #eaeaea;
+        padding: 5px 0;
+        font-size: 16px;
+    }
+
+    .show-count-down .box-count .text {
+        background: #eaeaea;
+        font-size: 12px;
+        margin-top: 1px;
+        width: 100%;
+        float: left;
+        padding: 5px 0;
+        color: #666;
+    }
+
 h1, h2, h3, h4, h5, h6 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     font-style: normal;
 }
-.divider{position:relative;}
+
+.divider {
+    position: relative;
+}
+
 h1.divider:before, h2.divider:before, h3.divider:before, h4.divider:before, h5.divider:before, h6.divider:before {
     background: rgba(0, 0, 0, 0.1);
     content: "";
@@ -14256,6 +14266,7 @@ h1.divider:before, h2.divider:before, h3.divider:before, h4.divider:before, h5.d
     position: absolute;
     bottom: -12px;
 }
+
 h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divider:after, h6.divider:after {
     content: "";
     height: 2px;
@@ -14263,22 +14274,61 @@ h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divid
     width: 40px;
     position: absolute;
     bottom: -12px;
-     background-color: #00bac9;
+    background-color: #00bac9;
 }
-.wp1{
-    padding: 20px;    
+
+.wp1 {
+    padding: 20px;
     text-align: justify;
-    border:1px solid #fff8f8;
-    
-    }
-.wp1 img{max-width:100%!important;}
-.wp1 p{margin-top:10px;}
-.imgct{position:relative;}
-.imgct h2{
-    position: absolute;
-    bottom: 1px;
-    left: 10px;
-    color: white;
-    text-shadow: 2px 2px #2d1a0c;
-    font-size: 18px;
+    border: 1px solid #fff8f8;
 }
+
+    .wp1 img {
+        max-width: 100% !important;
+    }
+
+    .wp1 p {
+        margin-top: 10px;
+    }
+
+.imgct {
+    position: relative;
+}
+
+    .imgct h2 {
+        position: absolute;
+        bottom: 1px;
+        left: 10px;
+        color: white;
+        text-shadow: 2px 2px #2d1a0c;
+        font-size: 18px;
+    }
+
+.tct2 ul {
+    margin: 0;
+    text-align: center;
+    overflow: inherit;
+    font-size: 1em;
+}
+
+    .tct2 ul li {
+        margin: 0;
+        position: relative;
+        display: inline-block;
+        height: 140px;
+        width: 140px;
+        background-color: #f7f7f7;
+    }
+
+        .tct2 ul li i {
+            margin: 0;
+            display: inline-block;
+            font-size: 28px;
+            height: 50px;
+            line-height: 50px;
+        }
+
+        .tct2 ul li span {
+            display: block;
+            margin: 0;
+        }
