--- a/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 home-article">
-                        <div class="tittle-b">Nhà môi giới tiêu biểu</div>
+                        <div class="tittle-b">Thông tin dự án</div>
                         <div class="border-b artCt2">
                             @if (ViewData["customArticle"] != null)
                             {
@@ -167,12 +167,12 @@
                 <div class="row banner-bottom">
                     <div class="col-sm-6 item-left">
                         <div class="banner-boder-zoom">
-                            <a href="#"><img alt="ads" class="img-responsive" src="/assets/data/option5/banner1.jpg" /></a>
+                            <a href="#"><img alt="AdsSlide2" class="img-responsive" src="/assets/data/option5/banner1.jpg"  title="AdsSlide2"/></a>
                         </div>
                     </div>
                     <div class="col-sm-6 item-right">
                         <div class="banner-boder-zoom">
-                            <a href="#"><img alt="ads" class="img-responsive" src="/assets/data/option5/banner2.jpg" /></a>
+                            <a href="#"><img alt="AdsSlide2" class="img-responsive" src="/assets/data/option5/banner2.jpg"  title="AdsSlide2"/></a>
                         </div>
                     </div>
                 </div>
@@ -187,12 +187,12 @@ else
             <div class="row banner-bottom">
                 <div class="col-sm-6 item-left">
                     <div class="banner-boder-zoom">
-                        <a href="#"><img alt="ads" class="img-responsive" src="assets/data/option5/banner1.jpg" /></a>
+                        <a href="#"><img alt="AdsSlide2" class="img-responsive" src="assets/data/option5/banner1.jpg"  title="AdsSlide2"/></a>
                     </div>
                 </div>
                 <div class="col-sm-6 item-right">
                     <div class="banner-boder-zoom">
-                        <a href="#"><img alt="ads" class="img-responsive" src="assets/data/option5/banner2.jpg" /></a>
+                        <a href="#"><img alt="AdsSlide2" class="img-responsive" src="assets/data/option5/banner2.jpg" title="AdsSlide2"/></a>
                     </div>
                 </div>
             </div>
