--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -103,7 +103,7 @@
                                                                             <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                         </div>
                                                                         <div class="add-to-cart">
-                                                                            <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
+                                                                            <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
                                                                         </div>
                                                                         <div class="group-price">
                                                                             <span class="product-new">Mới</span>
@@ -165,7 +165,7 @@
                                                                 <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                             </div>
                                                             <div class="add-to-cart">
-                                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
+                                                                <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
                                                             </div>
                                                             <div class="group-price">
                                                                 <span class="product-new">Mới</span>
@@ -234,7 +234,7 @@
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                 </div>
                                                                 <div class="add-to-cart">
-                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
+                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
                                                                 </div>
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
