--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -213,7 +213,7 @@
                     <div class="address-box">
 
                         @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
-                        <div class="adrct">
+                        @*<div class="adrct">
                             <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
                             <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
@@ -228,23 +228,22 @@
                                 <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
                             }
 
+                        </div>*@
+
+                        <div class="adrct">
+                            <div class="tit-contain"><i class=""></i> Thái Nguyên</div>
+                            <div class="tit-contain"><i class="fa fa-home"></i> CSSX chè Hùng Nhung</div>
+                            <div class="tit-contain"><i class="fa fa-location-arrow"></i> xóm Nam Đồng, xã Tân Cương, TP Thái Nguyên</div>
+                            <div class="tit-contain"><i class="fa fa-phone"></i> 0988123594</div>
+                            <div class="tit-contain"><i class="fa fa-envelope"></i> nhasanfood@gmail.com</div>
                         </div>
 
-                        <div  class="adrct">                            
-                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>                            
-                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
-
-                            @if (!string.IsNullOrEmpty(commonInfo.Email))
-                            {
-                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                            }
-
-                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                            {
-                                <div class="tit-name">Skype:</div>
-                                <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                            }
-
+                        <div class="adrct">
+                            <div class="tit-contain"><i class=""></i> Hà Nội</div>
+                            <div class="tit-contain"><i class="fa fa-home"></i> Đại lý Phượng Chili</div>
+                            <div class="tit-contain"><i class="fa fa-location-arrow"></i> ngõ 25 Thái Thịnh, Hà Nội</div>
+                            <div class="tit-contain"><i class="fa fa-phone"></i> 01683336966</div>
+                            <div class="tit-contain"><i class="fa fa-envelope"></i> nhasanfood@gmail.com</div>
                         </div>
                          @{
                             string thisUrl = HttpContext.Current.Request.RawUrl;
@@ -272,38 +271,21 @@
 
                                 @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
                                 <div class="adrct">
-                                    <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
-                                    <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
-
-                                    @if (!string.IsNullOrEmpty(commonInfo.Email))
-                                    {
-                                        <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                                    }
-
-                                    @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                                    {
-                                        <div class="tit-name">Skype:</div>
-                                        <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                                    }
-
+                                    <div class="tit-contain"><i class=""></i> Bắc Kạn</div>
+                                    <div class="tit-contain"><i class="fa fa-home"></i> Tạp hóa Tuyết Huân</div>
+                                    <div class="tit-contain"><i class="fa fa-location-arrow"></i> số 33, tổ 11A, P Sông Cầu, Bắc Kạn</div>
+                                    <div class="tit-contain"><i class="fa fa-phone"></i> 0965562687</div>
+                                    <div class="tit-contain"><i class="fa fa-envelope"></i> nhasanfood@gmail.com</div>
                                 </div>
 
                                 <div class="adrct">
-                                    <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
-                                    <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
-
-                                    @if (!string.IsNullOrEmpty(commonInfo.Email))
-                                    {
-                                        <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                                    }
-
-                                    @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                                    {
-                                        <div class="tit-name">Skype:</div>
-                                        <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                                    }
-
+                                    <div class="tit-contain"><i class=""></i> Ecopark</div>
+                                    <div class="tit-contain"><i class="fa fa-home"></i> Đại lý Thu Dung</div>
+                                    <div class="tit-contain"><i class="fa fa-location-arrow"></i> WBB 2617, West Bay, Ecopark</div>
+                                    <div class="tit-contain"><i class="fa fa-phone"></i> 0916566233</div>
+                                    <div class="tit-contain"><i class="fa fa-envelope"></i> nhasanfood@gmail.com</div>
                                 </div>
+                             
                                 
                             </div>
                             @*<div class="introduce-list">
